--- a/k8s/redis-deployment.yml
+++ b/k8s/redis-deployment.yml
@@ -21,7 +21,7 @@ spec:
         tier: backend
     spec:
       containers:
-      - image: redis:6.0-rc2-alpine
+      - image: redislabs/redisgears:1.0.0
         name: redis
         ports:
         - containerPort: 6379
